--- a/LQAlbumFinder/Info.plist
+++ b/LQAlbumFinder/Info.plist
@@ -47,6 +47,8 @@
 	<string>需要访问您的相册</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>需要调用您的麦克风</string>
+	<key>PHPhotoLibraryPreventAutomaticLimitedAccessAlert</key>
+	<true/>
 	<key>NSCameraUsageDescription</key>
 	<string>需要调用您的相机</string>
 </dict>
